# OsPlot

./: .gitignore  README.md
ArduinoUno/: Makefile  adc.c  adc.h  lectura_adc.c  main.c  pols.c  pols_generat.c  print_num.c  print_num.h  serial.c  serial.h  serra.c  sinus.c  sinus.h  sinus_artefacte.c  vector_a_c.m
Detectors de freqüència/: detecta_bin.py
Document/: tfg.bib  tfg.tex
Fitxers comuns/ArduinoUno/: Makefile  adc.c  adc.h  cua.c  cua.h  serial.c  serial.h
Interfícies/HTML-Chart.js/: grafica.js  index.html  package-lock.json
OsPlot-Bàsic/: Makefile  OsPlot.c  arduino.c  plot.gnu
OsPlot-MCU/ArduinoUno/: Makefile  OsPlot-MCU.c  OsPlot-MCU.h  adc.c  adc.h  cua.c  cua.h  lectura_adc.c  print_num.c  print_num.h  serial.c  serial.h
OsPlot-MCU/Interfícies/Bin-C-GNUPlot/: Makefile  OsPlot-MCU.h  interfície.c  plot.gnu  plot_debug.gnu
OsPlot-MCU/Interfícies/Bin-Rust-GNUPlot/: Cargo.toml
OsPlot-MCU/Interfícies/Bin-Rust-GNUPlot/src/: main.rs  missatges_bucle.rs  missatges_mcu.rs  parser.rs  script_plot.rs
OsPlot-PC/ArduinoUno/: Makefile  adc.c  adc.h  cua.h  lectura_adc.c  pols.c  pols_generat.c  print_num.c  print_num.h  serial.h  serra.c  sinus.c  sinus.h  sinus_artefacte.c
OsPlot-PC/Detectors de freqüència/: detecta.c
OsPlot-PC/Interfícies/HTML-Chart.js/: index.html  missatges.proto  package.json
OsPlot-PC/Triggers/Python/WebSockets/: Makefile  missatges.proto
Triggers/Python/WebSockets/: trigger.py
Triggers/bash/: OsPlot.sh  plot.gnu
Triggers/bash/Bashly/: osplot
bash/: OsPlot.sh  plot.gnu  plot_debug.gnu
src/: Cargo.toml
(+4 files in other folders)
