[package]
name = "osplot_mcu_interficie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="4.2.4"
serialport={version = "4.2.0", default-features=false}
ctrlc="3.2.5"
nix="0.26.2"
tempfile="3.5.0"

[profile.release]
lto = true
opt-level = 2